# danbo_nov

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/services/: danbooru.py  novelai.py  optimizer.py
app/templates/: base.html  dashboard.html  index.html
static/: .gitkeep
